@@ -6,6 +6,11 @@ Feature oriented Revision history for Test-DBIC-ExpectedQueries
 
 * Support a test description, and report the test correctly.
 
+* Fix the stack trace so it's less spammy (filter out more common
+  infrastructure modules), and more readable.
+
+
+
 2.000 -- 2019-07-17 21:14:39 UTC
 
 * BREAKING CHANGE -- This release includes a bug fix to the
